# marketing-content

./: README.md  pyproject.toml
654-special/: avatar-info.md  basic-information.md  emails.md  exhaustives.html  faqs.html  features-benefits.html  guarantees.html  instructors.html  intro-problem.html  objections.html  styles.css  testimonials.html
archive/legacy-content/: test.html
archive/legacy-content/654-special/: emails.md  exhaustives.html  faqs.html  features-benefits.html  (+5 more)
back-2-basics/: avatar-info.md  features-benefits.html  guarantees.html
prompts/: system.md
prompts/channels/: email.md  landing_page.md  social.md
qa/: rubric.json
scripts/: campaign
src/marketing_agent/: __init__.py  cli.py
templates/: campaign.template.yaml
tests/: test_cli.py
tune-building-course/: avatar-info.md  avatar-info.txt  basic-information.md  features-benefits.html  features-benefits.md  objections.html
tune-building-online-course/: avatar-info.md  basic-information.md  emails.md  exhaustives.html  faqs.html  features-benefits.html  guarantees.html  instructors.html  intro-problem.html  objections.html  styles.css  testimonials.html
tune-building-plan/: avatar-info.md  basic-information.md  emails.md  exhaustives.html  faqs.html  features-benefits.html  guarantees.html  instructors.html  intro-problem.html  objections.html  testimonials.html
tune-building-success-plan/: avatar-info.md  basic-information.md  exhaustives.html  faqs.html  features-benefits.html  guarantees.html  instructors.html  intro-problem.html  objections.html  testimonials.html
(+17 files in other folders)
